HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include Document.open() and some DOM properties


Revision History:
 5-Nov-2002
Acknowledgements:
    Thanks to Troy Waldrep for pointing out the non-standard Refresh header definition accepted in popular browsers

Additions:
    1. Added support for the Refresh header

 4-Nov-2002
Acknowledgements:
    Thanks to Geert Bevin for fixing a problem with comparing cookies

Problems Fixed:
    1. Adding both a "global" cookie and a server-based cookie with the same name causes a NullPointerException

 3-Nov-2002 1.5
Acknowledgements:
    Thanks to Ken Corbin for adding tests for disabled and read-only parameters.
    Thanks to Geert Bevin for fixing a problem with generation of cookie headers that affects some servers.
    Thanks to Richard Harris for adding support for the title attribute for links,
           for adding the JavaScript Navigator.platform property,
           for adding Javascript support for the Screen object,
           for pointing out the value of retaining the same ScriptingEngine instance for a ScriptableDelegate,
           for adding stubs for various unimplemented JavaScript Window properties.
           and for finding a case where the handling of JavaScript comments was not working.
    Thanks to Stefan Renz for describing the correct way to set up proxy servers in Java 2 and later.
    Thanks to Troy Waldrep for help with the new handling of response statuses and messages.
           and for fixing the JavaScript / HTML end-comment bug
    Thanks to Andy Clark for help using the NekoHTML filter capability.
    Thanks to EdA-qa mort-ora-y for findind and fixing the MIME-encoding bug


Notes: