@@ -21,6 +21,7 @@ package com.meterware.httpunit;
 *******************************************************************************************************************/
 import com.meterware.pseudoserver.PseudoServerTest;
 import com.meterware.httpunit.cookies.CookieTest;
+import com.meterware.httpunit.javascript.NekoEnhancedScriptingTest;
 
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
@@ -62,6 +63,7 @@ public class HttpUnitSuite {
         result.addTest( MessageBodyRequestTest.suite() );
         result.addTest( CookieTest.suite() );
         if (HttpUnitOptions.getHTMLParser().getClass().getName().indexOf("Tidy") >= 0) result.addTest( JTidyPrintWriterTest.suite() );
+        if (HttpUnitOptions.getHTMLParser().getClass().getName().indexOf("NekoHTML") >= 0) result.addTest( NekoEnhancedScriptingTest.suite() );
         addOptionalTestCase( result, "com.meterware.httpunit.XMLPageTest" );
         addOptionalTestCase( result, "com.meterware.httpunit.FileUploadTest" );
         addOptionalTestCase( result, "com.meterware.httpunit.javascript.JavaScriptTestSuite" );
