@@ -1,0 +1,68 @@
+package com.meterware.httpunit.javascript;
+/********************************************************************************************************************
+ * $Id$
+ *
+ * Copyright (c) 2002, Russell Gold
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
+ * documentation files (the "Software"), to deal in the Software without restriction, including without limitation
+ * the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and
+ * to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all copies or substantial portions
+ * of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
+ * THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
+ * CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+ * DEALINGS IN THE SOFTWARE.
+ *
+ *******************************************************************************************************************/
+import junit.framework.TestSuite;
+import junit.textui.TestRunner;
+import com.meterware.httpunit.HttpUnitTest;
+import com.meterware.httpunit.WebConversation;
+import com.meterware.httpunit.WebResponse;
+import com.meterware.httpunit.WebLink;
+
+
+/**
+ *
+ * @author <a href="mailto:russgold@httpunit.org">Russell Gold</a>
+ **/ 
+public class NekoEnhancedScriptingTest extends HttpUnitTest {
+
+    public static void main( String args[] ) {
+        TestRunner.run( suite() );
+    }
+
+
+    public static TestSuite suite() {
+        return new TestSuite( NekoEnhancedScriptingTest.class );
+    }
+
+
+    public NekoEnhancedScriptingTest( String name ) {
+        super( name );
+    }
+
+
+    public void testEmbeddedDocumentWrite() throws Exception {
+        defineResource(  "OnCommand.html",  "<html><head><title>something</title></head>" +
+                                            "<body>" +
+                                            "<script language='JavaScript'>" +
+                                            "document.write( '<a id=here href=about:blank>' );" +
+                                            "document.write( document.title );" +
+                                            "document.write( '</a>' );" +
+                                            "</script>" +
+                                            "</body></html>" );
+        WebConversation wc = new WebConversation();
+        WebResponse response = wc.getResponse( getHostPath() + "/OnCommand.html" );
+        WebLink link = response.getLinkWithID( "here" );
+        assertNotNull( "The link was not found", link );
+        assertEquals( "Link contents", "something", link.asText() );
+    }
+
+
+}
