@@ -10,6 +10,10 @@ Limitations:
 
 
 Revision History:
+ 6-Nov-2002
+Problems fixed:
+    1. Simply removing the NekoHTML parser jar from the classpath was not enough to re-enable JTidy. Now it is.
+
  5-Nov-2002
 Acknowledgements:
     Thanks to Troy Waldrep for pointing out the non-standard Refresh header definition accepted in popular browsers
